src/objects/P7S1_NielsenDataDetail__c.object
<CustomObject>
    <fields>
        <fullName>P7S1_Brutto__c</fullName>
        <description>Brutto-Umsatz</description>
        <inlineHelpText>Brutto-Umsatz</inlineHelpText>
        <label>Brutto</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_Jahr__c</fullName>
        <label>Jahr</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Medienmix__c</fullName>
        <description>Zuordnung aus Medienklassen für den Medienmix</description>
        <inlineHelpText>Zuordnung aus Medienklassen für den Medienmix</inlineHelpText>
        <label>Medienmix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Monat__c</fullName>
        <label>Monat</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_NielsenDataAggr__c</fullName>
        <label>Nielsen-Daten</label>
        <referenceTo>P7S1_NielsenDataAggr__c</referenceTo>
        <relationshipLabel>Nielsen-Daten Details</relationshipLabel>
        <relationshipName>Nielsen_Daten_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Nielsen-Daten Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NDD-{0000000}</displayFormat>
        <label>Nielsen-Daten Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Nielsen-Daten Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>